# truesman

./: .env.example  .gitignore  Dockerfile  README.md
apps/api/: Dockerfile  pyproject.toml
apps/api/src/api/: config.py  db.py  main.py
apps/api/src/api/routes/: health.py  retell.py
apps/dashboard/: middleware.ts  package-lock.json  package.json
apps/dashboard/app/: page.tsx
apps/dashboard/app/auth/callback/: route.ts
apps/dashboard/app/login/: page.tsx
apps/dashboard/app/projects/: page.tsx
apps/dashboard/app/projects/[id]/: page.tsx
apps/dashboard/app/projects/[id]/hours/: actions.ts  page.tsx
apps/dashboard/app/projects/[id]/info/: actions.ts  page.tsx
apps/dashboard/app/projects/[id]/menu/: actions.ts  page.tsx
apps/dashboard/app/projects/[id]/rules/: actions.ts  page.tsx
apps/dashboard/app/projects/new/: actions.ts  page.tsx
apps/dashboard/app/ui/[[...slug]]/: page.tsx
apps/dashboard/components/ui/: sidebar-navigation.tsx
